feat: 自定义侧边栏控件和按钮控件

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,13 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
 
-project(simplyTranslate CXX)
+project(simplyTools CXX)
 set(CMAKE_CXX_STANDARD 14)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
+
+set(Qt5_DIR C:\\Qt\\Qt5.14.2\\5.14.2\\mingw73_64\\lib\\cmake\\Qt5)
 
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
 find_package(Qt5 COMPONENTS Gui  REQUIRED)
@@ -14,12 +16,13 @@ find_package(Qt5 COMPONENTS Network  REQUIRED)
 
 include_directories(${CMAKE_SOURCE_DIR}/src)
 
-include_directories(C:\\Qt\\Qt5.14.2\\5.14.2\\mingw73_64\\include)
+#include_directories(C:\\Qt\\Qt5.14.2\\5.14.2\\mingw73_64\\include)
 
 file(GLOB_RECURSE SRC src/*/*.cpp src/main.cpp)
 file(GLOB_RECURSE HEAD src/*/*.h)
+file(GLOB_RECURSE FORM src/*/*.qrc src/*/*/*.qrc)
 
-#set(RES_LIST
+# set(RES_LIST
 #        ${CMAKE_SOURCE_DIR}/src/res/res.qrc
 #        )
 
